添加引用类的几种方式